SEO improvements: blog, schemas, alt tags, spec-analyzer expansion
- Add blog section with article on reading construction specs faster
- Add SoftwareApplication schema to spec-analyzer, header-tracker, tool-tracker
- Improve image alt tags with targeted keywords
- Expand spec-analyzer page with How It Works, What You Get, Problem section
- Add blog link to desktop and mobile navigation
- Update sitemap with blog pages

--- a/header-tracker/index.html
+++ b/header-tracker/index.html
@@ -69,6 +69,37 @@
             defer
         ></script>
 
+        <!-- JSON-LD Structured Data -->
+        <script type="application/ld+json">
+            {
+                "@context": "https://schema.org",
+                "@type": "SoftwareApplication",
+                "name": "PM4Subs Header & Prop Calculator",
+                "description": "Automatic header sizing, prop counts, couplers, and rental duration calculator for masonry contractors. Get accurate counts for shoring and scaffolding needs.",
+                "url": "https://pm4subs.com/header-tracker/",
+                "applicationCategory": "BusinessApplication",
+                "operatingSystem": "Web",
+                "offers": {
+                    "@type": "Offer",
+                    "price": "0",
+                    "priceCurrency": "USD",
+                    "availability": "https://schema.org/PreOrder"
+                },
+                "publisher": {
+                    "@type": "Organization",
+                    "name": "PM4Subs",
+                    "url": "https://pm4subs.com/"
+                },
+                "featureList": [
+                    "Header sizing calculator",
+                    "Prop count calculations",
+                    "Coupler requirements",
+                    "Rental duration tracking",
+                    "Masonry-specific calculations"
+                ]
+            }
+        </script>
+
         <!-- Shared Header -->
         <script src="../shared-header.js"></script>
     </head>
