--- a/index.html
+++ b/index.html
@@ -706,7 +706,7 @@
                             <img
                                 src="screenshots/mobile-command-center.webp"
                                 loading="lazy"
-                                alt="Mobile dashboard with camera button"
+                                alt="PM4Subs mobile project management app for subcontractors with quick camera access"
                             />
                             <div class="screenshot-caption">
                                 <h4>Mobile-First Design</h4>
@@ -723,7 +723,7 @@
                             <img
                                 src="screenshots/projects-dashboard.webp"
                                 loading="lazy"
-                                alt="Active jobs dashboard"
+                                alt="PM4Subs project dashboard showing active construction jobs for masonry and concrete subcontractors"
                             />
                             <div class="screenshot-caption">
                                 <h4>Active Jobs Dashboard</h4>
@@ -738,7 +738,7 @@
                             <img
                                 src="screenshots/photo-gallery.webp"
                                 loading="lazy"
-                                alt="Photo gallery with filters"
+                                alt="Construction photo management with GPS tagging and category filters for jobsite documentation"
                             />
                             <div class="screenshot-caption">
                                 <h4>Organized Photos</h4>
@@ -753,7 +753,7 @@
                             <img
                                 src="screenshots/proposal-dashboard.webp"
                                 loading="lazy"
-                                alt="Proposals organized by status"
+                                alt="Construction bid and proposal tracking kanban board for subcontractor estimating"
                             />
                             <div class="screenshot-caption">
                                 <h4>Proposal Tracking</h4>
@@ -768,7 +768,7 @@
                             <img
                                 src="screenshots/command-center.webp"
                                 loading="lazy"
-                                alt="Command center with issue alerts"
+                                alt="PM4Subs command center dashboard with RFI alerts and project status for field crews"
                             />
                             <div class="screenshot-caption">
                                 <h4>Command Center</h4>
