--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
         <link rel="dns-prefetch" href="https://cdn.tailwindcss.com" />
         <link rel="dns-prefetch" href="https://challenges.cloudflare.com" />
 
+        <!-- Favicons -->
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="16x16"
+            href="/favicon-16x16.png"
+        />
+        <link
+            rel="icon"
+            type="image/png"
+            sizes="32x32"
+            href="/favicon-32x32.png"
+        />
+        <meta name="theme-color" content="#2563A8" />
+
         <title>PM4Subs – Project Management Software for Subcontractors</title>
         <meta
             name="description"
@@ -288,7 +305,7 @@
                                 Is the budget done for Riverside?
                             </div>
                         </div>
-                        <div class="message">
+                        <div class="message estimator">
                             <div class="sender">Estimator</div>
                             <div class="text">
                                 Which one? The school or the apartments?
