Add Turnstile spam protection to image-compressor page

--- a/image-compressor/index.html
+++ b/image-compressor/index.html
@@ -397,6 +397,11 @@
                             placeholder="Your Company"
                         />
                     </div>
+                    <div
+                        class="cf-turnstile"
+                        data-sitekey="0x4AAAAAACL5Y0yML1b9e4Bc"
+                        data-theme="dark"
+                    ></div>
                     <button type="submit" class="btn-primary w-full">
                         Request Access
                     </button>
@@ -507,6 +512,16 @@
                 const name = document.getElementById("modalName").value;
                 const email = document.getElementById("modalEmail").value;
                 const company = document.getElementById("modalCompany").value;
+                const turnstileResponse = document.querySelector(
+                    '[name="cf-turnstile-response"]',
+                )?.value;
+
+                if (!turnstileResponse) {
+                    alert("Please complete the security check.");
+                    submitBtn.textContent = originalText;
+                    submitBtn.disabled = false;
+                    return;
+                }
 
                 try {
                     const response = await fetch(
@@ -524,6 +539,7 @@
                                 email,
                                 company,
                                 source: "Image Compressor Page",
+                                turnstileToken: turnstileResponse,
                             }),
                         },
                     );
